# perfect-number-finder

./: README.md
haskell/: CHANGELOG.md  perfect-number-finder.cabal
haskell/app/: Main.hs
js/: index.js  package-lock.json  package.json
