cabal-version:      3.0

name:               perfect-number-finder
version:            0.1.0.0
-- synopsis:
license:            GPL-3.0-or-later
license-file:       LICENSE
author:             Ordluks
maintainer:         68952193+Ordluks@users.noreply.github.com
category:           Math
build-type:         Simple
extra-doc-files:    CHANGELOG.md

common warnings
    ghc-options: -Wall

executable perfect-number-finder
    import:           warnings

    main-is:          Main.hs

    build-depends:    base ^>=4.17.2.1,
                      timeit >=2.0

    hs-source-dirs:   app
    default-language: Haskell2010
